--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,9 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/core": "^0.6.3",
-    "@angular/cli": "1.5.3",
+    "@angular/cli": "6.1.4",
     "@angular/compiler-cli": "5.0.2",
     "@angular/language-service": "5.0.2",
     "@types/hammerjs": "2.0.34",
